event task is async