@@ -28,12 +28,11 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Component;
 
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 import static com.netflix.conductor.common.metadata.tasks.TaskType.TASK_TYPE_EVENT;
-import static com.netflix.conductor.core.exception.ApplicationException.Code.INTERNAL_ERROR;
 
 @Component(TASK_TYPE_EVENT)
 public class Event extends WorkflowSystemTask {
@@ -54,57 +53,53 @@ public class Event extends WorkflowSystemTask {
 
     @Override
     public void start(Workflow workflow, Task task, WorkflowExecutor workflowExecutor) {
-
         Map<String, Object> payload = new HashMap<>(task.getInputData());
         payload.put("workflowInstanceId", workflow.getWorkflowId());
         payload.put("workflowType", workflow.getWorkflowName());
         payload.put("workflowVersion", workflow.getWorkflowVersion());
         payload.put("correlationId", workflow.getCorrelationId());
 
-        String payloadJson;
         try {
-            payloadJson = objectMapper.writeValueAsString(payload);
-        } catch (JsonProcessingException e) {
-            String msg = String.format("Error serializing JSON payload for task: %s, workflow: %s", task.getTaskId(),
-                workflow.getWorkflowId());
-            throw new ApplicationException(INTERNAL_ERROR, msg);
-        }
-        Message message = new Message(task.getTaskId(), payloadJson, task.getTaskId());
-        ObservableQueue queue = getQueue(workflow, task);
-        if (queue != null) {
-            queue.publish(Collections.singletonList(message));
+            String payloadJson = objectMapper.writeValueAsString(payload);
+            Message message = new Message(task.getTaskId(), payloadJson, task.getTaskId());
+            ObservableQueue queue = getQueue(workflow, task);
+            queue.publish(List.of(message));
             LOGGER.debug("Published message:{} to queue:{}", message.getId(), queue.getName());
             task.getOutputData().putAll(payload);
-            if (isAsyncComplete(task)) {
-                task.setStatus(Status.IN_PROGRESS);
+            task.setStatus(isAsyncComplete(task) ? Status.IN_PROGRESS : Status.COMPLETED);
+        } catch (ApplicationException ae) {
+            if (ae.isRetryable()) {
+                LOGGER.info("A transient backend error happened when task {} tried to publish an event.", task.getTaskId());
             } else {
-                task.setStatus(Status.COMPLETED);
+                task.setStatus(Status.FAILED);
+                task.setReasonForIncompletion(ae.getMessage());
+                LOGGER.error("Error executing task: {}, workflow: {}", task.getTaskId(), workflow.getWorkflowId(), ae);
             }
-        } else {
-            task.setReasonForIncompletion("No queue found to publish.");
+        } catch (JsonProcessingException jpe) {
             task.setStatus(Status.FAILED);
+            task.setReasonForIncompletion("Error serializing JSON payload: " + jpe.getMessage());
+            LOGGER.error("Error serializing JSON payload for task: {}, workflow: {}", task.getTaskId(), workflow.getWorkflowId());
+        } catch (Exception e) {
+            task.setStatus(Status.FAILED);
+            task.setReasonForIncompletion(e.getMessage());
+            LOGGER.error("Error executing task: {}, workflow: {}", task.getTaskId(), workflow.getWorkflowId(), e);
         }
-    }
-
-    @Override
-    public boolean execute(Workflow workflow, Task task, WorkflowExecutor workflowExecutor) {
-        return false;
     }
 
     @Override
     public void cancel(Workflow workflow, Task task, WorkflowExecutor workflowExecutor) {
         Message message = new Message(task.getTaskId(), null, task.getTaskId());
-        getQueue(workflow, task).ack(Collections.singletonList(message));
+        ObservableQueue queue = getQueue(workflow, task);
+        queue.ack(List.of(message));
+    }
+
+    @Override
+    public boolean isAsync() {
+        return true;
     }
 
     @VisibleForTesting
     ObservableQueue getQueue(Workflow workflow, Task task) {
-        if (task.getInputData().get("sink") == null) {
-            task.setStatus(Status.FAILED);
-            task.setReasonForIncompletion("No sink specified in task");
-            return null;
-        }
-
         String sinkValueRaw = (String) task.getInputData().get("sink");
         Map<String, Object> input = new HashMap<>();
         input.put("sink", sinkValueRaw);
@@ -116,25 +111,18 @@ public class Event extends WorkflowSystemTask {
             if ("conductor".equals(sinkValue)) {
                 queueName = sinkValue + ":" + workflow.getWorkflowName() + ":" + task.getReferenceTaskName();
             } else if (sinkValue.startsWith("conductor:")) {
-                queueName = sinkValue.replaceAll("conductor:", "");
-                queueName = "conductor:" + workflow.getWorkflowName() + ":" + queueName;
+                queueName = "conductor:" + workflow.getWorkflowName() + ":" + sinkValue.replaceAll("conductor:", "");
             } else {
-                task.setStatus(Status.FAILED);
-                task.setReasonForIncompletion("Invalid / Unsupported sink specified: " + sinkValue);
-                return null;
+                throw new IllegalStateException("Invalid / Unsupported sink specified: " + sinkValue);
             }
         }
+
         task.getOutputData().put("event_produced", queueName);
 
         try {
             return eventQueues.getQueue(queueName);
         } catch (IllegalArgumentException e) {
-            LOGGER.error("Error setting up queue: {} for task:{}, workflow:{}", queueName, task.getTaskId(),
-                workflow.getWorkflowId(), e);
-            task.setStatus(Status.FAILED);
-            task.setReasonForIncompletion(
-                "Error when trying to access the specified queue/topic: " + sinkValue + ", error: " + e.getMessage());
-            return null;
+            throw new IllegalStateException("Error loading queue for name:" + queueName + ", sink:" + sinkValue + ", error: " + e.getMessage());
         }
     }
 }
